--- a/CMPE-172-Project/views/index.jade
+++ b/CMPE-172-Project/views/index.jade
@@ -2,7 +2,8 @@ extends layout
 
 block content
     h1= title
-    p Welcome to our test
+    p Welcome to our CmpE 172 WebApp
+    p Created by: Brendan, David, and Kevin
 
     // Wrapper
     #wrapper
@@ -11,17 +12,12 @@ block content
         #userInfo
             h2 User Info
             p
-                strong Name:
+                strong First Name:
                 |  <span id='userInfoName'></span>
                 br
-                strong Age:
+                strong Last Name:
                 |  <span id='userInfoAge'></span>
                 br
-                strong Gender:
-                |  <span id='userInfoGender'></span>
-                br
-                strong Location:
-                |  <span id='userInfoLocation'></span>
         // /USER INFO
 
         // USER LIST
@@ -42,11 +38,8 @@ block content
                 input#inputUserName(type='text', placeholder='Username')
                 input#inputUserEmail(type='text', placeholder='Email')
                 br
-                input#inputUserFullname(type='text', placeholder='Full Name')
-                input#inputUserAge(type='text', placeholder='Age')
-                br
-                input#inputUserLocation(type='text', placeholder='Location')
-                input#inputUserGender(type='text', placeholder='gender')
+                input#inputUserFullname(type='text', placeholder='First Name')
+                input#inputUserAge(type='text', placeholder='Last Name')
                 br
                 button#btnAddUser Add User
         // /ADD USER
